src/test/ui/associated-types/associated-types-no-suitable-bound.stderr
error[E0277]: the trait bound `T: Get` is not satisfied
  --> $DIR/associated-types-no-suitable-bound.rs:11:5
   |
LL |     fn uhoh<T>(foo: <T as Get>::Value) {}
   |     ^^^^^^^^-^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |       |
   |     |       If I were you, I would simply consider restricting this bound: `T: Get`
   |     the trait `Get` is not implemented for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
